pp2/samples/ifstmtexprerror.out

*** Error line 4.
	if (a ! b) {
              ^
*** syntax error

