pp2/samples/ifstmtexprerror.decaf
int main() {
	int a;
	int b;
	if (a ! b) {
		int c;
	}
	a = 0;
	b = 0;
}
